--- a/resources/views/input.html
+++ b/resources/views/input.html
@@ -1,4 +1,4 @@
-<select name="{{ name }}" class="{{ class }} form-control">
+<select name="{{ name }}" class="{{ class }} form-control chosen">
 
     {{ options }}
 
