No chosen right now

--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -1,4 +1,4 @@
-<select name="{{ name }}" class="{{ class }} form-control chosen">
+<select name="{{ name }}" class="{{ class }} form-control">
 
     {% for option in options %}
 
