--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -1,4 +1,4 @@
-<select name="{{ name }}" class="{{ class }} form-control selectpicker">
+<select name="{{ name }}" class="{{ class }} form-control select2">
 
     {% for option in options %}
 
