--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -1,8 +1,22 @@
-<select name="{{ field_type.getFieldName() }}" class="form-control select2" data-placeholder="{{ field_type.placeholder }}">
+<select name="{{ field_type.getFieldName() }}" class="form-control select2">
 
-    {% for option in field_type.options %}
+    {% for value, option in field_type.options %}
 
-        <option value="{{ option.value }}" {{ option.selected ? 'selected' }}>{{ option.title }}</option>
+        {% if option is iterable %}
+
+            <optgroup label="{{ trans(value) }}">
+                {% for innerValue, innerOption in option %}
+
+                    <option value="{{ innerValue }}" {{ innerValue == field_type.value ? 'selected' }}>{{ trans(innerOption) }}</option>
+
+                {% endfor %}
+            </optgroup>
+
+        {% else %}
+
+            <option value="{{ value }}" {{ value == field_type.value ? 'selected' }}>{{ trans(option) }}</option>
+
+        {% endif %}
 
     {% endfor %}
 
