--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -6,21 +6,7 @@
 
     {% for value, option in field_type.options %}
 
-        {% if option is iterable %}
-
-            <optgroup label="{{ trans(value) }}">
-                {% for innerValue, innerOption in option %}
-
-                    <option value="{{ innerValue }}" {{ innerValue == field_type.value ? 'selected' }}>{{ trans(innerOption) }}</option>
-
-                {% endfor %}
-            </optgroup>
-
-        {% else %}
-
-            <option value="{{ value }}" {{ value == field_type.value ? 'selected' }}>{{ trans(option) }}</option>
-
-        {% endif %}
+        <option value="{{ value }}" {{ value == field_type.key ? 'selected' }}>{{ trans(option) }}</option>
 
     {% endfor %}
 
