--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -1,13 +1,7 @@
-<select
-        name="{{ field_type.getInputName() }}"
-        class="ui search dropdown"
-        {{ field_type.disabled ? 'disabled' }}
-        >
+<select class="form-control" name="{{ field_type.getInputName() }}">
 
     {% for value, option in field_type.options %}
-
         <option value="{{ value }}" {{ value == field_type.key ? 'selected' }}>{{ trans(option) }}</option>
-
     {% endfor %}
 
 </select>
