--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -1,4 +1,7 @@
-<select class="form-control" name="{{ field_type.getInputName() }}">
+<select
+        class="form-control"
+        name="{{ field_type.getInputName() }}"
+        {{ field_type.disabled ? 'disabled' }}>
 
     {% for value, option in field_type.options %}
         <option value="{{ value }}" {{ value == field_type.key ? 'selected' }}>{{ trans(option) }}</option>
