--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -1,6 +1,6 @@
 <select
         class="form-control"
-        name="{{ field_type.getInputName() }}"
+        name="{{ field_type.input_name }}"
         {{ field_type.disabled ? 'disabled' }}>
 
     {% for value, option in field_type.options %}
