--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -1,10 +1,11 @@
+{{ var_dump(field_type.key) }}
 <select
         class="form-control"
         name="{{ field_type.input_name }}"
         {{ field_type.disabled ? 'disabled' }}>
 
     {% for value, option in field_type.options %}
-        <option value="{{ value }}" {{ value == field_type.key ? 'selected' }}>{{ trans(option) }}</option>
+        <option value="{{ value }}" {{ value == field_type.value ? 'selected' }}>{{ trans(option) }}</option>
     {% endfor %}
 
 </select>
