--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -4,7 +4,15 @@
         {{ field_type.disabled ? 'disabled' }}>
 
     {% for value, option in field_type.options %}
-        <option value="{{ value }}" {{ value == field_type.key ? 'selected' }}>{{ trans(option) }}</option>
+        {% if option is iterable %}
+            <optgroup label="{{ value }}">
+                {% for value, option in option %}
+                    <option value="{{ value }}" {{ value == field_type.key ? 'selected' }}>{{ trans(option) }}</option>
+                {% endfor %}
+            </optgroup>
+        {% else %}
+            <option value="{{ value }}" {{ value == field_type.key ? 'selected' }}>{{ trans(option) }}</option>
+        {% endif %}
     {% endfor %}
 
 </select>
