--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -3,6 +3,10 @@
         name="{{ field_type.input_name }}"
         {{ field_type.disabled ? 'disabled' }}>
 
+    {% if not field_type.required %}
+        <option>{{ trans(field_type.placeholder) }}</option>
+    {% endif %}
+
     {% for value, option in field_type.options %}
         {% if option is iterable %}
             <optgroup label="{{ value }}">
