--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -1,7 +1,4 @@
-<select
-        class="form-control"
-        name="{{ field_type.input_name }}"
-        {{ field_type.disabled ? 'disabled' }}>
+<select class="form-control" name="{{ field_type.input_name }}" {{ field_type.disabled ? 'disabled' }}>
 
     {% if not field_type.required %}
         <option>{{ trans(field_type.placeholder) }}</option>
