--- a/resources/views/radio.twig
+++ b/resources/views/radio.twig
@@ -9,7 +9,7 @@
                         type="radio"
                         value="{{ value }}"
                         name="{{ field_type.input_name }}"
-                        {{ value in field_type.value ? 'selected' }}>
+                        {{ value == field_type.key ? 'checked' }}>
 
                 {{ trans(option) }}
             </label>
@@ -20,7 +20,7 @@
                     type="radio"
                     value="{{ value }}"
                     name="{{ field_type.input_name }}"
-                    {{ value in field_type.value ? 'selected' }}>
+                    {{ value == field_type.key ? 'checked' }}>
 
             {{ trans(option) }}
         </label>
