--- a/resources/views/radio.twig
+++ b/resources/views/radio.twig
@@ -1,28 +1,36 @@
-{% for value, option in field_type.options %}
-    {% if option is iterable %}
+<div class="c-inputs-stacked">
 
-        <label>{{ value }}</label>
+    {% for value, option in field_type.options %}
+        {% if option is iterable %}
 
-        {% for value, option in option %}
-            <label class="radio">
+            <label>{{ value }}</label>
+
+            {% for value, option in option %}
+                <label class="c-input c-radio">
+                    <input
+                            type="radio"
+                            value="{{ value }}"
+                            name="{{ field_type.input_name }}"
+                            {{ value == field_type.key ? 'checked' }}>
+
+                    <span class="c-indicator"></span>
+
+                    {{ trans(option) }}
+                </label>
+            {% endfor %}
+        {% else %}
+            <label class="c-input c-radio">
                 <input
                         type="radio"
                         value="{{ value }}"
                         name="{{ field_type.input_name }}"
                         {{ value == field_type.key ? 'checked' }}>
 
+                <span class="c-indicator"></span>
+
                 {{ trans(option) }}
             </label>
-        {% endfor %}
-    {% else %}
-        <label class="radio">
-            <input
-                    type="radio"
-                    value="{{ value }}"
-                    name="{{ field_type.input_name }}"
-                    {{ value == field_type.key ? 'checked' }}>
+        {% endif %}
+    {% endfor %}
 
-            {{ trans(option) }}
-        </label>
-    {% endif %}
-{% endfor %}
+</div>
