--- a/resources/views/dropdown.twig
+++ b/resources/views/dropdown.twig
@@ -1,4 +1,4 @@
-<select class="c-select" name="{{ field_type.input_name }}" {{ field_type.disabled ? 'disabled' }}>
+<select class="c-select form-control" name="{{ field_type.input_name }}" {{ field_type.disabled ? 'disabled' }}>
 
     {% if not field_type.required %}
         <option>{{ trans(field_type.placeholder) }}</option>
