--- a/resources/views/filter.twig
+++ b/resources/views/filter.twig
@@ -3,6 +3,6 @@
     <option value="" disabled {{ not field_type.value ? 'selected' }}>{{ trans(field_type.placeholder) }}</option>
 
     {% for value, title in field_type.options %}
-        <option value="{{ value }}" {{ field_type.value == value ? 'selected' }}>{{ trans(title) }}</option>
+        <option value="{{ value }}" {{ value == field_type.key ? 'selected' }}>{{ trans(title) }}</option>
     {% endfor %}
 </select>
