--- a/resources/views/dropdown.twig
+++ b/resources/views/dropdown.twig
@@ -1,4 +1,10 @@
-<select class="c-select form-control" name="{{ field_type.input_name }}" {{ field_type.disabled ? 'disabled' }}>
+<select
+        class="c-select form-control"
+        name="{{ field_type.input_name }}"
+        {{ html_attributes(field_type.attributes) }}
+        {{ field_type.disabled ? 'disabled' }}
+        {{ field_type.readonly ? 'readonly' }}
+        {{ field_type.required ? 'required' }}>
 
     {% if not field_type.required %}
         <option>{{ trans(field_type.placeholder) }}</option>
