Placeholder should show if the field is required or not

--- a/resources/views/dropdown.twig
+++ b/resources/views/dropdown.twig
@@ -5,8 +5,8 @@
         {{ field_type.disabled ? 'disabled' }}
         {{ field_type.readonly ? 'readonly' }}>
 
-    {% if not field_type.required %}
-        <option>{{ trans(field_type.placeholder) }}</option>
+    {% if field_type.placeholder %}
+        <option value="">{{ trans(field_type.placeholder) }}</option>
     {% endif %}
 
     {% for value, option in field_type.options %}
