--- a/resources/views/dropdown.twig
+++ b/resources/views/dropdown.twig
@@ -10,7 +10,7 @@
 
     {% for value, option in field_type.options %}
         {% if option is iterable %}
-            <optgroup label="{{ value }}">
+            <optgroup label="{{ trans(value) }}">
                 {% for value, option in option %}
                     <option value="{{ value }}" {{ value == field_type.key ? 'selected' }}>{{ trans(option) }}</option>
                 {% endfor %}
