--- a/resources/views/radio.twig
+++ b/resources/views/radio.twig
@@ -6,27 +6,27 @@
             <label>{{ value }}</label>
 
             {% for value, option in option %}
-                <label class="c-input c-radio">
+                <label class="{#custom-control#} custom-radio" style="display: block;">
                     <input
                             type="radio"
                             value="{{ value }}"
                             name="{{ field_type.input_name }}"
                             {{ value == field_type.key ? 'checked' }}>
 
-                    <span class="c-indicator"></span>
+                    <span class="{#custom-control-indicator#}"></span>
 
                     {{ trans(option) }}
                 </label>
             {% endfor %}
         {% else %}
-            <label class="c-input c-radio">
+            <label class="{#custom-control#} custom-radio" style="display: block;">
                 <input
                         type="radio"
                         value="{{ value }}"
                         name="{{ field_type.input_name }}"
                         {{ value == field_type.key ? 'checked' }}>
 
-                <span class="c-indicator"></span>
+                <span class="{#custom-control-indicator#}"></span>
 
                 {{ trans(option) }}
             </label>
