--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -1,7 +1,8 @@
-{{ asset_add("styles.css", "anomaly.field_type.select::css/select2.min.css") }}
-{{ asset_add("styles.css", "anomaly.field_type.select::css/overrides.css") }}
+{{ asset_add("styles.css", "anomaly.field_type.select::scss/select2.min.scss") }}
+{{ asset_add("styles.css", "anomaly.field_type.select::scss/overrides.scss") }}
 {{ asset_add("scripts.js", "anomaly.field_type.select::js/select2.full.min.js") }}
 {{ asset_add("scripts.js", "anomaly.field_type.select::js/init.js") }}
+
 <select
         class="select2"
         name="{{ field_type.input_name }}"
