--- a/resources/scss/overrides.scss
+++ b/resources/scss/overrides.scss
@@ -1,51 +1,51 @@
-.select2 {
-    width: 100% !important;
-}
-
-.select2-override {
-    height: calc(2.5rem - 2px) !important;
-    border: 1px solid rgba(0, 0, 0, .15) !important;
-    border-radius: 0.17rem !important;
-}
-
-.select2-option-override {
-    padding: 0 !important;
-    margin: 0 !important;
-}
-
 .select2-container {
-    height: auto !important;
-}
 
-.select2-container--open {
-    .select2-override {
-        border-bottom-left-radius: 0 !important;
-        border-bottom-right-radius: 0 !important;
+    &.select2 {
+        width: 100% !important;
+        height: auto;
     }
-}
 
-.select2-search__field {
-    border: 1px solid $input-border-color !important;
-}
+    .select2-override {
+        height: calc(2.5rem - 2px);
+        border: 1px solid rgba(0, 0, 0, .15);
+        border-radius: 0.17rem;
+    }
 
-.select2-results__option--highlighted {
-    background-color: $gray-dark !important;
-}
+    .select2-option-override {
+        padding: 0;
+        margin: 0;
+    }
 
-.select2-selection {
-    padding-top: 0;
-    padding-bottom: 0;
-}
+    &.select2-container--open {
+        .select2-override {
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+        }
+    }
 
-.select2-selection__arrow {
-    display: none;
-}
+    .select2-selection {
+        padding-top: 0;
+        padding-bottom: 0;
 
-.select2-selection__rendered {
-    height: 100% !important;
-    line-height: 36px !important;
-}
+        .select2-selection__arrow {
+            display: none;
+        }
 
-.select2-dropdown {
-    border-color: $input-border-color;
+        .select2-selection__rendered {
+            height: 100%;
+            line-height: 36px;
+        }
+    }
+
+    .select2-dropdown {
+        border-color: $input-border-color;
+
+        .select2-search__field {
+            border: 1px solid $input-border-color;
+        }
+
+        .select2-results .select2-results__option--highlighted {
+            background-color: $gray-dark;
+        }
+    }
 }
