--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -1,7 +1,7 @@
 {{ asset_add("styles.css", "anomaly.field_type.select::scss/select2.min.scss") }}
 {{ asset_add("styles.css", "anomaly.field_type.select::scss/overrides.scss") }}
 {{ asset_add("scripts.js", "anomaly.field_type.select::js/select2.full.min.js") }}
-{{ asset_add("scripts.js", "anomaly.field_type.select::js/init.js") }}
+{{ asset_add("scripts.js", "anomaly.field_type.select::js/search.js") }}
 
 <select
         class="select2"
