--- a/resources/scss/overrides.scss
+++ b/resources/scss/overrides.scss
@@ -23,7 +23,7 @@
         }
     }
 
-    .select2-selection {
+    .select2-selection.select2-selection--single {
         padding-top: 0;
         padding-bottom: 0;
 
