--- a/resources/scss/overrides.scss
+++ b/resources/scss/overrides.scss
@@ -24,6 +24,7 @@
     }
 
     .select2-selection.select2-selection--single {
+        height: 38px;
         padding-top: 0;
         padding-bottom: 0;
 
