--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -1,10 +1,9 @@
-{{ asset_add("styles.css", "anomaly.field_type.select::scss/select2.min.scss") }}
-{{ asset_add("styles.css", "anomaly.field_type.select::scss/overrides.scss") }}
-{{ asset_add("scripts.js", "anomaly.field_type.select::js/select2.full.min.js") }}
+{{ asset_add("styles.css", "anomaly.field_type.select::scss/choices.scss") }}
+{{ asset_add("scripts.js", "anomaly.field_type.select::js/choices.min.js") }}
 {{ asset_add("scripts.js", "anomaly.field_type.select::js/search.js") }}
 
 <select
-        class="select2"
+        class="search"
         name="{{ field_type.input_name }}"
         {{ html_attributes(field_type.attributes) }}
         {{ field_type.disabled ? 'disabled' }}
