--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -11,18 +11,18 @@
         {{ field_type.readonly ? 'readonly' }}>
 
     {% if field_type.placeholder %}
-        <option value="">{{ trans(field_type.placeholder) }}</option>
+        <option value="" {{ not field_type.value ? 'selected' }}>{{ trans(field_type.placeholder) }}</option>
     {% endif %}
 
     {% for value, option in field_type.options %}
         {% if option is iterable %}
             <optgroup label="{{ trans(value) }}">
                 {% for value, option in option %}
-                    <option value="{{ value }}" {{ value == field_type.key ? 'selected' }}>{{ trans(option) }}</option>
+                    <option value="{{ value }}" {{ value is same as(field_type.key) ? 'selected' }}>{{ trans(option) }}</option>
                 {% endfor %}
             </optgroup>
         {% else %}
-            <option value="{{ value }}" {{ value == field_type.key ? 'selected' }}>{{ trans(option) }}</option>
+            <option value="{{ value }}" {{ value is same as(field_type.key) ? 'selected' }}>{{ trans(option) }}</option>
         {% endif %}
     {% endfor %}
 
