--- a/resources/views/radio.twig
+++ b/resources/views/radio.twig
@@ -15,7 +15,7 @@
 
                     <span class="{#custom-control-indicator#}"></span>
 
-                    {{ trans(option) }}
+                    {{ trans(option)|raw }}
                 </label>
             {% endfor %}
         {% else %}
@@ -28,7 +28,7 @@
 
                 <span class="{#custom-control-indicator#}"></span>
 
-                {{ trans(option) }}
+                {{ trans(option)|raw }}
             </label>
         {% endif %}
     {% endfor %}
