--- a/resources/views/filter.twig
+++ b/resources/views/filter.twig
@@ -2,9 +2,9 @@
         class="custom-select form-control"
         name="{{ field_type.input_name }}">
 
-    <option value="" disabled {{ not field_type.value ? 'selected' }}>{{ trans(field_type.placeholder) }}</option>
+    <option value="" disabled>{{ trans(field_type.placeholder) }}</option>
 
     {% for value, title in field_type.options %}
-        <option value="{{ value }}" {{ value is same as(field_type.key) ? 'selected' }}>{{ trans(title) }}</option>
+        <option value="{{ value }}" {{ value == field_type.key ? 'selected' }}>{{ trans(title) }}</option>
     {% endfor %}
 </select>
