Don't disable this.

--- a/resources/views/filter.twig
+++ b/resources/views/filter.twig
@@ -2,7 +2,7 @@
         class="custom-select form-control"
         name="{{ field_type.input_name }}">
 
-    <option value="" disabled>{{ trans(field_type.placeholder) }}</option>
+    <option value="">{{ trans(field_type.placeholder) }}</option>
 
     {% for value, title in field_type.options %}
         <option value="{{ value }}" {{ value == field_type.key ? 'selected' }}>{{ trans(title) }}</option>
