Use named assets.

--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -1,3 +1,5 @@
+{{ asset_add("scripts.js", "anomaly.field_type.select::scss/choices.scss", ["as:jshjohnson/Choices.css"]) }}
+{{ asset_add("scripts.js", "anomaly.field_type.select::js/choices.min.js", ["as:jshjohnson/Choices.js"]) }}
 {{ asset_add("scripts.js", "anomaly.field_type.select::js/search.js") }}
 
 <select
