Fix issue with search z-index.

--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -1,5 +1,6 @@
 {{ asset_add("styles.css", "anomaly.field_type.select::scss/choices.scss", ["as:jshjohnson/Choices.css"]) }}
 {{ asset_add("scripts.js", "anomaly.field_type.select::js/choices.min.js", ["as:jshjohnson/Choices.js"]) }}
+{{ asset_add("styles.css", "anomaly.field_type.select::scss/search.scss") }}
 {{ asset_add("scripts.js", "anomaly.field_type.select::js/search.js") }}
 
 <select
