--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -1,6 +1,7 @@
-{{ asset_add("styles.css", "anomaly.field_type.select::scss/choices.scss", ["as:jshjohnson/Choices.css"]) }}
-{{ asset_add("scripts.js", "anomaly.field_type.select::js/choices.min.js", ["as:jshjohnson/Choices.js"]) }}
-{{ asset_add("styles.css", "anomaly.field_type.select::scss/search.scss") }}
+{{ asset_add("styles.css", "anomaly.field_type.select::css/choices.css", ["as:jshjohnson/Choices.css"]) }}
+{{ asset_add("styles.css", "anomaly.field_type.select::css/search.css") }}
+
+{{ asset_add("scripts.js", "anomaly.field_type.select::js/choices.js", ["as:jshjohnson/Choices.js"]) }}
 {{ asset_add("scripts.js", "anomaly.field_type.select::js/search.js") }}
 
 <select
